--- a/jason.html
+++ b/jason.html
@@ -1,40 +1,61 @@
 <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <link rel="stylesheet" type="text/css" href="style.css">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
-      <title>Jason Dooley</title>
-    </head>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <body>
-      <nav class="nav-links">
-        <a href="#about-me">About Me</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <!--Navbar-->
+    <nav class="navbar fixed-top navbar-toggleable-md navbar-inverse bg-primary">
+      <div class="container">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+          <a class="navbar-brand" href="https://www.linkedin.com/in/jason-dooley-a297998a">jason.dooley</a>
+        </div>
+      </div>
+    </nav><!--Navbar-->
 
-      <section id="about-me">
-        <img src="me.jpg" />
-        <h1>Jason Dooley</h1>
-        <h2> Software Engineer</h2>
-      </section>
+    <!--Jumbotron-->
+    <div class="jumbotron jumbotron-fluid bg-info text-white">
+      <div class="container text-sm-center pt-5">
+        <div class="row">
+          <div class="col-sm-6">
+          <h2 class="display-5">Front End Web Developer</h2>
+          <hr>
+          <p class="lead">Front-End Developer with practical experience in project management
+            and creative direction; devoted to functional programming and
+            information architecture.
+          </p>
+          </div>
+          <div class="col-sm-6">
+          <img class="self img-fluid" src="linkedin.jpg" alt="Jason Dooley">
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Jumbotron-->
 
-        <hr />
-
-        <section class="content">
-        <p>Recently retired from the U.S. Army after 15 years, I have set my sights
-           on a new career in software engineering.</p>
-        <p>In my free time (which is slim to none with a 10 month
-           old baby at home), I enjoy flying my DJI Phantom 3 drone,
-           watching sports on television, and spending time with my
-           family. When not doing any of those things, I am coding,
-           honing my newfound skills and craft.</p>
-
-        <p>Thank you for visiting my page. Please <a href="contact.html">contact me</a>
-           if you have any questions or projects you would like me to look at.</p>
-
-
-      </section>
-
-    </body>
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+  </body>
 </html>
