--- a/jason.html
+++ b/jason.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
   </head>
   <body>
     <!--Navbar-->
@@ -28,7 +29,7 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
-          <a class="navbar-brand" href="https://www.linkedin.com/in/jason-dooley-a297998a">jason.dooley</a>
+          <a class="navbar-brand" href="https://www.linkedin.com/in/jason-dooley-a297998a" target="_blank">jason.dooley</a>
         </div>
       </div>
     </nav><!--Navbar-->
@@ -38,7 +39,7 @@
       <div class="container text-sm-center pt-5">
         <div class="row">
           <div class="col-sm-6">
-          <h2 class="display-5">Front End Web Developer</h2>
+          <h2>Front End Web Developer</h2>
           <hr>
           <p class="lead">Front-End Developer with practical experience in project management
             and creative direction; devoted to functional programming and
@@ -46,12 +47,51 @@
           </p>
           </div>
           <div class="col-sm-6">
-          <img class="self img-fluid" src="linkedin.jpg" alt="Jason Dooley">
+          <img class="img-fluid rounded-circle" src="linkedin.jpg" alt="Jason Dooley">
           </div>
         </div>
       </div>
+    </div><!--Jumbotron-->
+
+    <div class="jumbotron jumbotron-fluid text-center text-primary portfolio">
+      <h2 class="display-3">Portfolio</h2>
+      <hr class="portfolio-hr1">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-sm-4">
+            <div class="card" style="width: 20rem;">
+              <img class="card-img-top" src="..." alt="Project Image">
+              <div class="card-block">
+                <h4 class="card-title">Project Title</h4>
+                <p class="card-text">Project description text.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card" style="width: 20rem;">
+              <img class="card-img-top" src="..." alt="Project Image">
+              <div class="card-block">
+                <h4 class="card-title">Project title</h4>
+                <p class="card-text">Project description text.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card" style="width: 20rem;">
+              <img class="card-img-top" src="..." alt="Project Image">
+              <div class="card-block">
+                <h4 class="card-title">Project title</h4>
+                <p class="card-text">Project description text.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <h2 class="contact display-3 text-center">Contact</h2>
+        <hr>
     </div>
-    <!--Jumbotron-->
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
